@@ -30,7 +30,7 @@ import junit.framework.TestCase;
 
 public abstract class SchemaTest extends TestCase
 {
-	private Driver driver;
+	private Dialect driver;
 	String stringType;
 	String intType;
 	String intType2;
@@ -74,7 +74,7 @@ public abstract class SchemaTest extends TestCase
 		if(url.startsWith("jdbc:hsqldb:"))
 		{
 			Class.forName("org.hsqldb.jdbcDriver");
-			driver = new HsqldbDriver();
+			driver = new HsqldbDialect();
 			stringType = "varchar(8)";
 			intType = "integer";
 			intType2 = null;
@@ -83,7 +83,7 @@ public abstract class SchemaTest extends TestCase
 		else if(url.startsWith("jdbc:mysql:"))
 		{
 			Class.forName("com.mysql.jdbc.Driver");
-			driver = new MysqlDriver("this");
+			driver = new MysqlDialect("this");
 			stringType = "varchar(8) character set utf8 binary";
 			intType = "integer";
 			intType2 = "bigint";
@@ -92,7 +92,7 @@ public abstract class SchemaTest extends TestCase
 		else if(url.startsWith("jdbc:oracle:"))
 		{
 			Class.forName("oracle.jdbc.driver.OracleDriver");
-			driver = new OracleDriver(user.toUpperCase());
+			driver = new OracleDialect(user.toUpperCase());
 			stringType = "VARCHAR2(8 BYTE)";
 			intType = "NUMBER(12)";
 			intType2 = "NUMBER(15)";
@@ -101,7 +101,7 @@ public abstract class SchemaTest extends TestCase
 		else if(url.startsWith("jdbc:postgresql:"))
 		{
 			Class.forName("org.postgresql.Driver");
-			driver = new PostgresqlDriver();
+			driver = new PostgresqlDialect();
 			stringType = "VARCHAR(8)";
 			intType = "INTEGER";
 			intType2 = null;
