@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* renamed dsmf driver to dialect
+	this breaks backwards API compatibility, but is unlikely to affect normal projects
 * moved info classes into separate package
 	this breaks backwards API compatibility, but is unlikely to affect normal projects
 * removed cope live editor from exedio-cope.jar, it is now it's own project
